--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,10 +10,11 @@
 </h:head>
 <h:body>
 
-	<ui:composition template="/templates/common.xhtml">
-		<ui:define name="rightMenu"></ui:define>
-		<ui:define name="content"></ui:define>
+	<ui:composition template="/templates/common2.xhtml">
+
+		<ui:define name="content">
+		</ui:define>
 	</ui:composition>
-	
+
 </h:body>
 </html>
